--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -135,8 +135,8 @@
         </div>
       </div>
 
-      <div class="section-contato py-5">
-        <div class="container mx-auto w-75 py-5">
+      <div class="section-contato pt-5 pb-lg-5">
+        <div class="container mx-auto w-75 pt-5 pb-lg-5">
             <div class="row contato mx-5">
                 <div class="col-md-6 brasil text-center ">
                     <div class="my-5 mx-3">
@@ -168,8 +168,54 @@
         </div>
       </div>
 
+      <div class="section-pre pb-5">
+        <svg preserveAspectRatio="none" width="1400" height="160" viewBox="0 0 1400 160" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_65_3)">
+          <rect width="1400" height="160" fill="white"/>
+          <rect width="1400" height="160" fill="#001B18"/>
+          <ellipse cx="700" cy="0.5" rx="700" ry="98.5" fill="#002222"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_65_3">
+          <rect width="1400" height="160" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>
+        <div class="container d-flex flex-column justify-content-center align-items-center text-center">
+          <h1>Contate-nos</h1>
+          <div class="d-flex flex-row gap-3 my-3">
+            <h3>(93) 92xxx-xxxx</h3>
+            <h3>(93) 92xxx-xxxx</h3>
+          </div>
+          <nav class="my-4">
+            <ul class="nav nav-pills gap-3">
+              <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Serviços</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contatos</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
+            </ul>
+          </nav>
+          <div class="d-flex gap-5 mt-4">
+            <!-- Ícone do Facebook -->
+            <a href="https://facebook.com" target="_blank" class="text-dark">
+              <svg width="40" height="40" viewBox="0 0 24 24" fill="#1877F2" xmlns="http://www.w3.org/2000/svg">
+                <path d="M22 12.07C22 6.48 17.52 2 12 2S2 6.48 2 12.07c0 5.02 3.66 9.18 8.44 9.91v-7.02h-2.5v-2.89h2.5V9.79c0-2.48 1.49-3.85 3.77-3.85 1.09 0 2.23.19 2.23.19v2.46h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.89h-2.34v7.02C18.34 21.25 22 17.09 22 12.07z"/>
+              </svg>
+            </a>
+        
+            <!-- Ícone do Instagram -->
+            <a href="https://instagram.com" target="_blank" class="text-dark">
+              <svg width="40" height="40" viewBox="0 0 24 24" fill="#E4405F" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 2.16c3.2 0 3.58.01 4.85.07 3.25.15 4.77 1.68 4.92 4.92.06 1.27.07 1.65.07 4.85s-.01 3.58-.07 4.85c-.15 3.25-1.68 4.77-4.92 4.92-1.27.06-1.65.07-4.85.07s-3.58-.01-4.85-.07c-3.25-.15-4.77-1.68-4.92-4.92C2.17 15.58 2.16 15.2 2.16 12s.01-3.58.07-4.85c.15-3.25 1.68-4.77 4.92-4.92C8.42 2.17 8.8 2.16 12 2.16M12 0C8.7 0 8.3.01 7.02.07c-4.34.2-6.75 2.61-6.95 6.95C.01 8.3 0 8.7 0 12s.01 3.7.07 4.98c.2 4.34 2.61 6.75 6.95 6.95C8.3 23.99 8.7 24 12 24s3.7-.01 4.98-.07c4.34-.2 6.75-2.61 6.95-6.95.06-1.28.07-1.68.07-4.98s-.01-3.7-.07-4.98c-.2-4.34-2.61-6.75-6.95-6.95C15.7.01 15.3 0 12 0zm0 5.84a6.16 6.16 0 1 0 0 12.32 6.16 6.16 0 0 0 0-12.32zm0 10.16a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.4-10.84a1.44 1.44 0 1 1 0-2.88 1.44 1.44 0 0 1 0 2.88z"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+      
+
       <footer>
-        <p>Todos os direitos reservados &copy; FS Engenharia</p>
+        <h5>Todos os direitos reservados &copy; FS Engenharia</h5>
     </footer>   
 
     <!-- Optional JavaScript; choose one of the two! -->
