--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -15,6 +15,34 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse w-100 d-flex flex-column justify-content-end align-items-end text-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -217,39 +245,41 @@
     </svg>
     <div class="container d-flex flex-column justify-content-center align-items-center text-center">
       <h1>Contate-nos</h1>
-      <div class="d-flex flex-row gap-3 my-3">
-        <nav class="my-4">
-          <ul class="nav gap-3">
-            <li class="nav-item"><a class="nav-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24"
-                  height="24" fill="#25D366" viewBox="0 0 24 24">
-                  <path
-                    d="M12.004 2C6.479 2 2 6.477 2 12.002a9.93 9.93 0 001.36 5.02L2 22l5.163-1.344a9.983 9.983 0 004.84 1.246h.001c5.523 0 10.001-4.478 10.001-9.998C22.005 6.477 17.527 2 12.004 2zm0 18.401a8.36 8.36 0 01-4.27-1.177l-.306-.182-3.064.797.82-2.985-.199-.308a8.36 8.36 0 01-1.258-4.406c0-4.617 3.754-8.371 8.371-8.371 2.237 0 4.34.872 5.92 2.453a8.355 8.355 0 012.451 5.918c0 4.617-3.755 8.371-8.372 8.371zm4.557-6.285c-.25-.125-1.479-.73-1.708-.812-.23-.082-.398-.124-.566.126-.166.25-.649.812-.797.977-.146.166-.292.187-.541.063a6.937 6.937 0 01-2.037-1.25 7.677 7.677 0 01-1.423-1.764c-.149-.25-.016-.387.112-.512.116-.114.25-.291.375-.437.124-.146.165-.25.25-.416.082-.166.042-.312-.021-.437-.062-.124-.562-1.357-.77-1.857-.203-.487-.408-.42-.566-.428l-.48-.01a.924.924 0 00-.666.312c-.23.25-.875.855-.875 2.084s.895 2.42 1.02 2.588c.124.166 1.762 2.693 4.277 3.778.598.257 1.064.41 1.427.526.599.19 1.143.163 1.574.099.48-.072 1.479-.604 1.688-1.187.208-.583.208-1.083.146-1.187-.063-.104-.23-.167-.479-.292z" />
-                </svg></a></li>
-            <li class="nav-item"><a class="nav-link" href="#">
-                <h3>(93) 92987-6543</h3>
-              </a></li>
-          </ul>
+      <div class="d-flex flex-row gap-3 my-3 contatos-whatsapp">
+        <nav class="mx-4">
+          <a class="nav-link" href="#">
+            <ul class="nav gap-3">
+              <li class="nav-item"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                    height="24" fill="#25D366" viewBox="0 0 24 24">
+                    <path
+                      d="M12.004 2C6.479 2 2 6.477 2 12.002a9.93 9.93 0 001.36 5.02L2 22l5.163-1.344a9.983 9.983 0 004.84 1.246h.001c5.523 0 10.001-4.478 10.001-9.998C22.005 6.477 17.527 2 12.004 2zm0 18.401a8.36 8.36 0 01-4.27-1.177l-.306-.182-3.064.797.82-2.985-.199-.308a8.36 8.36 0 01-1.258-4.406c0-4.617 3.754-8.371 8.371-8.371 2.237 0 4.34.872 5.92 2.453a8.355 8.355 0 012.451 5.918c0 4.617-3.755 8.371-8.372 8.371zm4.557-6.285c-.25-.125-1.479-.73-1.708-.812-.23-.082-.398-.124-.566.126-.166.25-.649.812-.797.977-.146.166-.292.187-.541.063a6.937 6.937 0 01-2.037-1.25 7.677 7.677 0 01-1.423-1.764c-.149-.25-.016-.387.112-.512.116-.114.25-.291.375-.437.124-.146.165-.25.25-.416.082-.166.042-.312-.021-.437-.062-.124-.562-1.357-.77-1.857-.203-.487-.408-.42-.566-.428l-.48-.01a.924.924 0 00-.666.312c-.23.25-.875.855-.875 2.084s.895 2.42 1.02 2.588c.124.166 1.762 2.693 4.277 3.778.598.257 1.064.41 1.427.526.599.19 1.143.163 1.574.099.48-.072 1.479-.604 1.688-1.187.208-.583.208-1.083.146-1.187-.063-.104-.23-.167-.479-.292z" />
+                  </svg></li>
+              <li class="nav-item">
+                  <h3>(93) 92987-6543</h3>
+            </ul>
+          </a>
         </nav>
 
-        <nav class="my-4">
-          <ul class="nav gap-3">
-            <li class="nav-item"><a class="nav-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24"
-                  height="24" fill="#25D366" viewBox="0 0 24 24">
-                  <path
-                    d="M12.004 2C6.479 2 2 6.477 2 12.002a9.93 9.93 0 001.36 5.02L2 22l5.163-1.344a9.983 9.983 0 004.84 1.246h.001c5.523 0 10.001-4.478 10.001-9.998C22.005 6.477 17.527 2 12.004 2zm0 18.401a8.36 8.36 0 01-4.27-1.177l-.306-.182-3.064.797.82-2.985-.199-.308a8.36 8.36 0 01-1.258-4.406c0-4.617 3.754-8.371 8.371-8.371 2.237 0 4.34.872 5.92 2.453a8.355 8.355 0 012.451 5.918c0 4.617-3.755 8.371-8.372 8.371zm4.557-6.285c-.25-.125-1.479-.73-1.708-.812-.23-.082-.398-.124-.566.126-.166.25-.649.812-.797.977-.146.166-.292.187-.541.063a6.937 6.937 0 01-2.037-1.25 7.677 7.677 0 01-1.423-1.764c-.149-.25-.016-.387.112-.512.116-.114.25-.291.375-.437.124-.146.165-.25.25-.416.082-.166.042-.312-.021-.437-.062-.124-.562-1.357-.77-1.857-.203-.487-.408-.42-.566-.428l-.48-.01a.924.924 0 00-.666.312c-.23.25-.875.855-.875 2.084s.895 2.42 1.02 2.588c.124.166 1.762 2.693 4.277 3.778.598.257 1.064.41 1.427.526.599.19 1.143.163 1.574.099.48-.072 1.479-.604 1.688-1.187.208-.583.208-1.083.146-1.187-.063-.104-.23-.167-.479-.292z" />
-                </svg></a></li>
-            <li class="nav-item"><a class="nav-link" href="#">
-                <h3>(93) 92987-6543</h3>
-              </a></li>
-          </ul>
+        <nav class="mx-4">
+          <a class="nav-link" href="#">
+            <ul class="nav gap-3">
+              <li class="nav-item"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                    height="24" fill="#25D366" viewBox="0 0 24 24">
+                    <path
+                      d="M12.004 2C6.479 2 2 6.477 2 12.002a9.93 9.93 0 001.36 5.02L2 22l5.163-1.344a9.983 9.983 0 004.84 1.246h.001c5.523 0 10.001-4.478 10.001-9.998C22.005 6.477 17.527 2 12.004 2zm0 18.401a8.36 8.36 0 01-4.27-1.177l-.306-.182-3.064.797.82-2.985-.199-.308a8.36 8.36 0 01-1.258-4.406c0-4.617 3.754-8.371 8.371-8.371 2.237 0 4.34.872 5.92 2.453a8.355 8.355 0 012.451 5.918c0 4.617-3.755 8.371-8.372 8.371zm4.557-6.285c-.25-.125-1.479-.73-1.708-.812-.23-.082-.398-.124-.566.126-.166.25-.649.812-.797.977-.146.166-.292.187-.541.063a6.937 6.937 0 01-2.037-1.25 7.677 7.677 0 01-1.423-1.764c-.149-.25-.016-.387.112-.512.116-.114.25-.291.375-.437.124-.146.165-.25.25-.416.082-.166.042-.312-.021-.437-.062-.124-.562-1.357-.77-1.857-.203-.487-.408-.42-.566-.428l-.48-.01a.924.924 0 00-.666.312c-.23.25-.875.855-.875 2.084s.895 2.42 1.02 2.588c.124.166 1.762 2.693 4.277 3.778.598.257 1.064.41 1.427.526.599.19 1.143.163 1.574.099.48-.072 1.479-.604 1.688-1.187.208-.583.208-1.083.146-1.187-.063-.104-.23-.167-.479-.292z" />
+                  </svg></li>
+              <li class="nav-item">
+                  <h3>(93) 92987-6543</h3>
+            </ul>
+          </a>
         </nav>
       </div>
       <nav class="my-4">
-        <ul class="nav gap-3">
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Serviços</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contatos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
+        <ul class="nav gap-3 menu-contatos">
+          <li class="nav-item"><a class="nav-link" href="#"><h6>Home</h6></a></li>
+          <li class="nav-item"><a class="nav-link" href="#"><h6>Serviços</h6></a></li>
+          <li class="nav-item"><a class="nav-link" href="#"><h6>Contatos</h6></a></li>
+          <li class="nav-item"><a class="nav-link" href="#"><h6>Sobre</h6></a></li>
         </ul>
       </nav>
       <div class="d-flex gap-5 mt-4">
