--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg menu-black">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">FS Engenharia</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -159,6 +159,22 @@
       </div>
     </div>
 
+    <div class="container my-5 p-4 mx-auto">
+      <div class="rounded-4 p-5 mx-5 text-white section-especialista">
+        <div class="w-lg-75">
+          <h2 class="fw-bold mb-3">Fale com um especialista</h2>
+          <p class="mb-4">FS Engenharia possui mais de 4 anos de experiência no setor, atuando com excelência em 
+            topografia, consultoria técnica e apoio especializado para acesso ao crédito rural. Com uma equipe 
+            capacitada e conhecimento do campo, ajudamos produtores a conquistar recursos e a tomar decisões 
+            seguras para o crescimento sustentável de suas propriedades.</p>
+        </div>
+        <a href="#contato" class="btn btn-warning text-white rounded-pill">
+          <h4 class="fw-bold px-4 pt-2 ">Fale com um especialista </h4>
+        </a>
+      </div>
+    </div>
+    
+
     <div class="mx-5">
       <h1 class="mb-4">Nossos serviços</h1>
       <div class="row">
@@ -220,15 +236,15 @@
   </div>
 
   <div class="section-contato pt-5 pb-lg-5">
-    <div class="container mx-auto w-75 pt-5 pb-lg-5">
+    <div class="container mx-auto pt-5 pb-lg-5">
       <div class="row contato mx-5">
-        <div class="col-md-6 brasil text-center ">
+        <div class="col-lg  -6 brasil text-center ">
           <div class="my-5 mx-3">
             <img src="img/svgviewer-output.svg" class="w-100" alt="SVG Image">
             <h2>ATUAMOS EM TODO O BRASIL</h2>
           </div>
         </div>
-        <div class="col-md-6 div-form">
+        <div class="col-lg-6 div-form">
           <form class="my-5 mx-3">
             <div class="mb-4">
               <label for="name" class="form-label">Nome</label>
@@ -236,13 +252,55 @@
             </div>
 
             <div class="mb-4">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
+              <label for="email" class="form-label">Telefone</label>
+              <input type="tel" class="form-control" id="tel" placeholder="Digite seu telefone" required>
+            </div>
+
+            <div class="mb-4">
+              <div class="row">
+                <div class="col-lg-4">
+                  <label for="uf" class="form-label">UF</label>
+                  <select class="form-select" aria-label="Default select example">
+                    <option selected>Selecione o estado</option>
+                    <option value="AC">Acre (AC)</option>
+                    <option value="AL">Alagoas (AL)</option>
+                    <option value="AP">Amapá (AP)</option>
+                    <option value="AM">Amazonas (AM)</option>
+                    <option value="BA">Bahia (BA)</option>
+                    <option value="CE">Ceará (CE)</option>
+                    <option value="DF">Distrito Federal (DF)</option>
+                    <option value="ES">Espírito Santo (ES)</option>
+                    <option value="GO">Goiás (GO)</option>
+                    <option value="MA">Maranhão (MA)</option>
+                    <option value="MT">Mato Grosso (MT)</option>
+                    <option value="MS">Mato Grosso do Sul (MS)</option>
+                    <option value="MG">Minas Gerais (MG)</option>
+                    <option value="PA">Pará (PA)</option>
+                    <option value="PB">Paraíba (PB)</option>
+                    <option value="PR">Paraná (PR)</option>
+                    <option value="PE">Pernambuco (PE)</option>
+                    <option value="PI">Piauí (PI)</option>
+                    <option value="RJ">Rio de Janeiro (RJ)</option>
+                    <option value="RN">Rio Grande do Norte (RN)</option>
+                    <option value="RS">Rio Grande do Sul (RS)</option>
+                    <option value="RO">Rondônia (RO)</option>
+                    <option value="RR">Roraima (RR)</option>
+                    <option value="SC">Santa Catarina (SC)</option>
+                    <option value="SP">São Paulo (SP)</option>
+                    <option value="SE">Sergipe (SE)</option>
+                    <option value="TO">Tocantins (TO)</option>
+                  </select>
+                </div>
+                <div class="col mt-4 mt-lg-0">
+                  <label for="email" class="form-label">Cidade</label>
+                  <input type="email" class="form-control" id="email" placeholder="Cidade" required>
+                </div>
+              </div>
             </div>
 
             <div class="mb-4">
               <label for="message" class="form-label">Mensagem</label>
-              <textarea class="form-control" id="message" rows="4" placeholder="Digite sua mensagem"
+              <textarea class="form-control" id="message" rows="4" placeholder="Qual o seu problema..."
                 required></textarea>
             </div>
 
@@ -305,14 +363,14 @@
           <li class="nav-item"><a class="nav-link" href="#">
               <h6>Home</h6>
             </a></li>
-          <li class="nav-item"><a class="nav-link" href="#">
-              <h6>Serviços</h6>
-            </a></li>
+            <li class="nav-item"><a class="nav-link" href="#">
+                <h6>Sobre</h6>
+              </a></li>
           <li class="nav-item"><a class="nav-link" href="#">
               <h6>Contatos</h6>
             </a></li>
           <li class="nav-item"><a class="nav-link" href="#">
-              <h6>Sobre</h6>
+              <h6>Serviços</h6>
             </a></li>
         </ul>
       </nav>
