--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar navbar-dark bg-dark navbar-expand-lg menu-black">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">FS Engenharia</a>
+      <a class="navbar-brand" href="#"><img height="20px" src="img/FS-ENGENHARIA-ICONE.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
