correção menu responsivo

--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -23,7 +23,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse w-100 d-flex flex-column justify-content-end align-items-end text-end"
+      <div class="collapse navbar-collapse w-100 flex-column justify-content-end align-items-end text-end"
         id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -42,7 +42,6 @@
       </div>
     </div>
   </nav>
-
 
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
