--- a/index.html
+++ b/index.html
@@ -133,12 +133,160 @@
   </header>
 
   <main>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="my-5 mx-md-5 mx-5">
+            <h1>Sobre</h1>
+            <h2>FS Engenharia</h2>
+            <p>
+              A F S Engenharia é uma empresa especializada em consultoria rural, com atuação estratégica na região oeste
+              do Pará, especialmente no município de Rurópolis e arredores. Nascida da necessidade de apoiar o
+              desenvolvimento sustentável no campo, a empresa consolidou-se como uma parceira fundamental de agricultores
+              familiares, médios e grandes produtores, além de comunidades tradicionais, como os quilombolas.
+            </p>
+
+            <p>
+              Com base em um plano de negócios sólido e já implementado, a F S Engenharia vem transformando propriedades
+              rurais em empreendimentos prósperos, oferecendo soluções inovadoras, técnicas e personalizadas. Entre os
+              serviços prestados, estão a elaboração de projetos para acesso a crédito rural, assistência técnica nas
+              áreas de agricultura e pecuária, análise e correção de solos, regularização fundiária e projetos de
+              licenciamento ambiental para atividades como a piscicultura.
+            </p>
+
+            <p>
+              Nosso compromisso é contribuir para o crescimento do agronegócio local com responsabilidade social e
+              ambiental, priorizando a qualidade no atendimento, a ética nas relações e o aprimoramento contínuo de nossa
+              equipe. Com um time de profissionais experientes e atualizados, utilizamos ferramentas modernas de análise
+              de dados para ajudar nossos clientes a tomar decisões estratégicas e assertivas.
+            </p>
+
+            <p>
+              Acreditamos na força do campo e no seu potencial transformador. Por isso, trabalhamos todos os dias para
+              impulsionar a produtividade, rentabilidade e sustentabilidade das propriedades rurais da nossa região.
+            </p>
+
+          </div>
+        </div>
+        <div class="col-md-6 container-valores">
+          <div class="my-5 mx-md-5 mx-4">
+            <div class="px-4 py-4 valores">
+              <h2>Missão</h2>
+              <p>Nossa missão é prestar consultoria aos produtores rurais da região, promovendo o
+                crescimento e o desenvolvimento de suas propriedades tornando-as mais competitivas
+                em suas atividades por meio de soluções inovadoras e sustentáveis, respeitando as
+                pessoas e o meio ambiente.
+              </p>
+              </p>
+            </div>
+            <div class="px-4 py-4 visao">
+              <h2>Valores</h2>
+              <p>Sustentabilidade e consciência de nossas responsabilidades sociais e com o meio ambiente; humanidade;
+                comprometimento; ética e respeito para com nossos colaboradores, clientes e parceiros; buscando novas
+                metas e desafios tanto para si quanto para a empresa.
+              </p>
+              <p>Buscando continuamente o desenvolvimento profissional investindo no seu autodesenvolvimento e
+                envolvendo-se em processos de inovação.
+              </p>
+            </div>
+            <div class="px-4 py-4 missao">
+              <h2>Visão</h2>
+              <p>
+                Ser reconhecida nacionalmente como referência em excelência na prestação de serviços de consultoria rural,
+                destacando-se pela qualidade, inovação e comprometimento com os resultados.
+              </p>
+              <p>
+                Nosso propósito é construir parcerias sólidas e duradouras,
+                promovendo o desenvolvimento sustentável, a valorização do produtor rural
+                e o fortalecimento contínuo da fronteira agrícola brasileira.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container my-5 p-4 mx-auto">
+        <div class="rounded-4 p-md-5 p-4 mx-md-5 text-white section-especialista">
+          <div class="w-lg-75">
+            <h2 class="fw-bold mb-3">Fale com um especialista</h2>
+            <p class="mb-4">FS Engenharia possui mais de 4 anos de experiência no setor, atuando com excelência em 
+              topografia, consultoria técnica e apoio especializado para acesso ao crédito rural. Com uma equipe 
+              capacitada e conhecimento do campo, ajudamos produtores a conquistar recursos e a tomar decisões 
+              seguras para o crescimento sustentável de suas propriedades.</p>
+          </div>
+          <a href="#contato" class="btn btn-warning text-white rounded-pill">
+            <h4 class="fw-bold px-4 pt-2 ">Fale com um especialista </h4>
+          </a>
+        </div>
+      </div>
+      
+
+      <div class="mx-md-5 mx-4">
+        <h1 class="mb-4">Nossos serviços</h1>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-12 mb-5">
+            <div class="card card-service">
+              <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando georreferenciamento de imóveis">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center text-center">
+                <h5 class="card-text">Georreferenciamento de Imóveis</h5>
+                <p class="card-description">
+                  Levantamento topográfico preciso para certificação de imóveis rurais junto aos órgãos competentes,
+                  atendendo às exigências do Incra.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 col-sm-12 mb-5">
+            <div class="card card-service">
+              <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando crédito rural">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center text-center">
+                <h5 class="card-text">Crédito Rural</h5>
+                <p class="card-description">
+                  Elaboração de projetos técnicos para acesso a linhas de crédito rural, fomentando o crescimento
+                  sustentável da produção agropecuária.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 col-sm-12 mb-5">
+            <div class="card card-service">
+              <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando serviço de topografia">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center text-center">
+                <h5 class="card-text">Topografia</h5>
+                <p class="card-description">
+                  Serviços de medição, levantamento planialtimétrico e demarcação de terrenos, essenciais para
+                  planejamento e gestão rural eficiente.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 col-sm-12 mb-5">
+            <div class="card card-service">
+              <img class="card-img-top" src="img/geo.jpeg" alt="Imagem representando o serviço LAR">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center text-center">
+                <h5 class="card-text">LAR</h5>
+                <p class="card-description">
+                  Regularização fundiária completa com foco na legalização de imóveis rurais e acesso às políticas
+                  públicas de desenvolvimento do campo.
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
     <div class="section-contato pt-5 pb-lg-5">
       <div class="container mx-auto pt-5 pb-lg-5">
-        <div class="row contato mx-5">
+        <div class="row contato mx-md-5 mx-4">
           <div class="col-lg  -6 brasil text-center ">
             <div class="my-5 mx-3">
-              <img src="img/svgviewer-output.svg" class="w-100" alt="SVG Image">
+              <img src="img/mapa-brasil.svg" class="mapa-brasil w-100" alt="Imagem com o mapa do Brasil">
               <h2>ATUAMOS EM TODO O BRASIL</h2>
             </div>
           </div>
