fix: Renomeando imagens

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <div class="carousel-item active">
           <div class="overlay"></div>
           <img
-            src="img/slide-mapeamento-gg.png"
+            src="img/slide-mapeamento-lg.png"
             srcset="
               img/slide-mapeamento-sm.png 750w,
               img/slide-mapeamento-md.png 1200w,
-              img/slide-mapeamento-gg.png 1500w
+              img/slide-mapeamento-lg.png 1500w
             "
             sizes="
               (max-width: 576px) 100vw,
@@ -75,11 +75,11 @@
         <div class="carousel-item">
           <div class="overlay"></div>
           <img
-            src="img/slide-credito-rural-gg.png"
+            src="img/slide-credito-rural-lg.png"
             srcset="
               img/slide-credito-rural-sm.png 750w,
               img/slide-credito-rural-md.png 1200w,
-              img/slide-credito-rural-gg.png 1500w
+              img/slide-credito-rural-lg.png 1500w
             "
             sizes="
               (max-width: 576px) 100vw,
@@ -98,11 +98,11 @@
         <div class="carousel-item">
           <div class="overlay"></div>
           <img
-            src="img/slide-mapeamento-gg.png"
+            src="img/slide-mapeamento-lg.png"
             srcset="
               img/slide-mapeamento-sm.png 750w,
               img/slide-mapeamento-md.png 1200w,
-              img/slide-mapeamento-gg.png 1500w
+              img/slide-mapeamento-lg.png 1500w
             "
             sizes="
               (max-width: 576px) 100vw,
@@ -448,10 +448,10 @@
   
   <!-- Optional JavaScript; choose one of the two! -->
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+  <script defer src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
 
