--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header>
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg menu-black">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img height="20px" src="img/fs-engenharia-icone.png"></a>
+        <a class="navbar-brand" href="#"><img height="20px" src="img/fs-engenharia-logo.png"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
