fix: Renomeando arquivo

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <div id="footer_content">
       <div id="footer_contacts">
         <div class="footer-logo">
-          <img src="img/FS-ENGENHARIA-ICONE.png" alt="Fs Engenharia-logo">
+          <img src="img/fs-engenharia-logo.png" alt="Fs Engenharia-logo">
           <h1>Engenharia</h1>
         </div>
           <p>Mais que consultoria, somos parceiros do produtor rural na busca por resultados sólidos e sustentáveis.</p>
