refactor: Remoção bootstrap menusuperio

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <meta name="description"
     content="Consultoria rural no oeste do Pará. Crédito rural, georreferenciamento, licenciamento ambiental e regularização de imóveis." />
-  
-    <meta property="og:title" content="FS Engenharia Rural">
+
+  <meta property="og:title" content="FS Engenharia Rural">
   <meta property="og:description" content="Consultoria rural, crédito e regularização fundiária.">
   <meta property="og:image" content="https://www.fsengenhariarural.com.br/fs-engenharia-logo.png">
   <meta property="og:type" content="website">
@@ -26,36 +26,29 @@
 
   <link href="css/style.css" rel="stylesheet">
 
+  <script defer src="script/app.js"></script>
+
   <title>FS Engenharia Rural | Consultoria, Crédito e Regularização</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg menu-black">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img height="20px" src="img/fs-engenharia-logo.png"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <nav class="navbar-s">
+      <div class="navbar-container-s">
+        <a href="#" class="navbar-brand-s">
+          <img src="img/fs-engenharia-logo.png" alt="FS Engenharia" />
+        </a>
+
+        <button class="navbar-toggle-s" aria-label="Abrir menu">
+          ☰
         </button>
 
-        <div class="collapse navbar-collapse w-100 flex-column justify-content-end align-items-end text-end"
-          id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sobre</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contatos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Serviços</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-menu-s">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
       </div>
     </nav>
 
@@ -99,9 +92,9 @@
         <div class="carousel-item">
           <div class="overlay"></div>
           <img src="img/slide-mapeamento-lg.png" srcset="
-              img/slide-mapeamento-sm.png 750w,
-              img/slide-mapeamento-md.png 1200w,
-              img/slide-mapeamento-lg.png 1500w
+              img/slide-geoprocessamento-sm.png 750w,
+              img/slide-geoprocessamento-md.png 1200w,
+              img/slide-geoprocessamento-lg.png 1500w
             " sizes="
               (max-width: 576px) 100vw,
               (max-width: 992px) 100vw,
