versão final form sem bootstrap, responsivo, e ja incluido no css final da pagina e html final por momento index.html

--- a/correcao.html
+++ b/correcao.html
@@ -1,3 +1,81 @@
+<div class="section-contato pt-5 pb-lg-5" id="container-form">
+      <div class="container mx-auto pt-5 pb-lg-5">
+        <div class="row contato mx-md-5 mx-4">
+          <div class="col-lg  -6 brasil text-center ">
+            <div class="my-5 mx-3">
+              <img src="img/mapa-brasil.svg" class="mapa-brasil w-100" alt="Imagem com o mapa do Brasil">
+              <h2>ATUAMOS EM TODO O BRASIL</h2>
+            </div>
+          </div>
+          <div class="col-lg-6 div-form">
+            <form class="my-5 mx-3">
+              <div class="mb-4">
+                <label for="name" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="name" placeholder="Digite seu nome" required>
+              </div>
+
+              <div class="mb-4">
+                <label for="email" class="form-label">Telefone</label>
+                <input type="tel" class="form-control" id="tel" placeholder="Digite seu telefone" required>
+              </div>
+
+              <div class="mb-4">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <label for="uf" class="form-label">UF</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Selecione o estado</option>
+                      <option value="AC">Acre (AC)</option>
+                      <option value="AL">Alagoas (AL)</option>
+                      <option value="AP">Amapá (AP)</option>
+                      <option value="AM">Amazonas (AM)</option>
+                      <option value="BA">Bahia (BA)</option>
+                      <option value="CE">Ceará (CE)</option>
+                      <option value="DF">Distrito Federal (DF)</option>
+                      <option value="ES">Espírito Santo (ES)</option>
+                      <option value="GO">Goiás (GO)</option>
+                      <option value="MA">Maranhão (MA)</option>
+                      <option value="MT">Mato Grosso (MT)</option>
+                      <option value="MS">Mato Grosso do Sul (MS)</option>
+                      <option value="MG">Minas Gerais (MG)</option>
+                      <option value="PA">Pará (PA)</option>
+                      <option value="PB">Paraíba (PB)</option>
+                      <option value="PR">Paraná (PR)</option>
+                      <option value="PE">Pernambuco (PE)</option>
+                      <option value="PI">Piauí (PI)</option>
+                      <option value="RJ">Rio de Janeiro (RJ)</option>
+                      <option value="RN">Rio Grande do Norte (RN)</option>
+                      <option value="RS">Rio Grande do Sul (RS)</option>
+                      <option value="RO">Rondônia (RO)</option>
+                      <option value="RR">Roraima (RR)</option>
+                      <option value="SC">Santa Catarina (SC)</option>
+                      <option value="SP">São Paulo (SP)</option>
+                      <option value="SE">Sergipe (SE)</option>
+                      <option value="TO">Tocantins (TO)</option>
+                    </select>
+                  </div>
+                  <div class="col mt-4 mt-lg-0">
+                    <label for="email" class="form-label">Cidade</label>
+                    <input type="email" class="form-control" id="email" placeholder="Cidade" required>
+                  </div>
+                </div>
+              </div>
+
+              <div class="mb-4">
+                <label for="message" class="form-label">Mensagem</label>
+                <textarea class="form-control" id="message" rows="4" placeholder="Qual o seu problema..."
+                  required></textarea>
+              </div>
+
+              <button type="submit" class="btn btn-primary w-100 py-2">
+                <h4 class="mb-0 text-center w-100">Solicitar Atendimento</h4>
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
 <footer>
     <div class="section-pre pb-5">
       <svg preserveAspectRatio="none" width="1400" height="160" viewBox="0 0 1400 160" fill="none"
