feature: Iniciando criação section Nossa equipe

--- a/index.html
+++ b/index.html
@@ -227,6 +227,64 @@
           </article>
         </section>
       </section>
+
+      <section>
+        <h1>Nossa Equipe e Projetos</h1>
+        <section class="section-equipes-projetos">
+          <section class="section-equipes">
+            <article class="item-1">
+              <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+              <p>A <strong>FS Engenharia Rural</strong> conta com uma equipe de engenheiros, agrimensores e técnicos especializados, 
+                com sólida atuação no campo e trabalho direto junto ao produtor rural, pautada na responsabilidade
+                técnica, proximidade e foco em resultados, oferecendo soluções eficientes e sustentáveis para o
+                desenvolvimento e a valorização das propriedades rurais, com ampla experiência no setor.</p>
+              <a>Fale com nossos especialistas ></a>
+            </article>
+            <section class="item-2">
+              <h5>Conheça nosso dia a dia:</h5>
+              <hr></hr>
+              <section class="grid-posts">
+                <article>
+                  <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+                </article>
+                <article>
+                  <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+                </article>
+                <article>
+                  <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+                </article>
+                <article>
+                  <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+                </article>
+              </section>
+              <a>Ver mais no Instagram ></a>
+            </section>
+          </section>
+          <hr></hr>
+          <h4>Veja alguns dos nossos trabalhos realizados no campo</h4>
+          <section>
+            <section class="section-service-menu">
+              <button>Georreferenciamento</button>
+              <button>Energia Solar</button>
+              <button>Licença Fundiária</button>
+              <button>Crédito Rural</button>
+            </section>
+            <section class="section-service-posts">
+                <article>
+                  <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+                </article>
+                <article>
+                  <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+                </article>
+                <article>
+                  <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+                </article>
+            </section>
+            <a>Solicitar orçamento para o meu projeto ></a>
+            <a>Entender qual serviço eu preciso ></a>
+          </section>
+        </section>
+      </section>
     </div>
   </main>
 
@@ -387,6 +445,8 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
+
+    <script async src="//www.instagram.com/embed.js"></script>
 
 </body>
 
