--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <div class="input-box">
                             <label for="uf" class="form-label">Estado (UF)</label>
                             <select name="uf" id="uf" class="form-select" required>
-                                <option value="" selected disabled>Selecione o estado</option>
+                                <option value="" selected disabled>Sele.. Estado</option>
                                 <option value="AC">Acre (AC)</option>
                                 <option value="AL">Alagoas (AL)</option>
                                 <option value="AP">Amapá (AP)</option>
