add um input email, ajuste na tela de tablet para o form

--- a/index.html
+++ b/index.html
@@ -314,9 +314,13 @@
                             <input id="firstName" type="text" name="firstName" placeholder="Digite seu nome" required>
                         </div>
                         <div class="input-box">
+                          <label for="email">Email</label>
+                            <input id="email" type="text" name="mail" placeholder="Digite seu email" required>
+                        </div>
+                        <div class="input-box">
                           <label for="city">Cidade</label>
                             <input id="city" type="text" name="city" placeholder="Cidade" required>
-                        </div>
+                        </div>              
                         <div class="input-box">
                             <label for="uf" class="form-label">Estado (UF)</label>
                             <select name="uf" id="uf" class="form-select" required>
