ajuste no tamanho de laptop img e textos no centro

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 <!--SECAO ENTRE EM CONTATO-->
     <div class="container-form">
         <div class="container-formulario">
-            <div class="form-content-left">
+            <div class="form-content-left" id="form-content-left">
                 <div class="form-image">
                     <img src="img/mapa-brasil.svg" alt="mapa do brasil">
                 </div>
