para tamanho ate 768px, add cores novas,transição do das opções escondidas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar-s">
       <div class="navbar-container-s">
         <a href="#" class="navbar-brand-s">
-          <img src="img/fs-engenharia-logo.png" alt="FS Engenharia" />
+          <img src="img/FS-ENGENHARIA_HORIZONTAL.png" alt="FS Engenharia" />
         </a>
 
         <button class="navbar-toggle-s" aria-label="Abrir menu">
