botão de contado na nav bar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <a href="#" class="navbar-brand-s">
           <img src="img/FS-ENGENHARIA_HORIZONTAL.png" alt="FS Engenharia" />
         </a>
+        
+        <div class="nav-btn-container">
+          <a href="#container-form" class="btn-nav-contato">Solicitar Orçamento</a>
+        </div>
 
         <button class="navbar-toggle-s" aria-label="Abrir menu">
           ☰
