fix: Ajuste navbar e geração de imagem

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar-s">
       <div class="navbar-container-s">
         <a href="#" class="navbar-brand-s">
-          <img src="img/FS-ENGENHARIA_HORIZONTAL.png" alt="FS Engenharia" />
+          <img src="img/logo-branca-horizontal.png" alt="FS Engenharia" />
         </a>
         
         <div class="nav-btn-container">
@@ -237,7 +237,7 @@
         <section class="section-equipes-projetos">
           <section class="section-equipes">
             <article class="item-1">
-              <img src="cda.jpg" alt="Georreferenciamento rural" style="width: 100%;" />
+              <img src="img/equipe.png" alt="Georreferenciamento rural" style="width: 100%;" />
               <p>A <strong>FS Engenharia Rural</strong> conta com uma equipe de engenheiros, agrimensores e técnicos especializados, 
                 com sólida atuação no campo e trabalho direto junto ao produtor rural, pautada na responsabilidade
                 técnica, proximidade e foco em resultados, oferecendo soluções eficientes e sustentáveis para o
